<resources>
    <string name="app_name">Burrp</string>
    <string name="Welcome">Welcome to Burrp</string>
    <string name="LoginButton">Login</string>
    <string name="SignupButton">Signup</string>
    <string name="Name">Name</string>
    <string name="College">College</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Mess">Mess/Hotel Name</string>
    <string name="Address">Address</string>
    <string name="Student">Student</string>
    <string name="Owner">Owner</string>
    <string name="MessTitle">Mess List</string>
    <string name="AddMenu">Add Menu Item</string>
    <string name="NoofItem">Enter Number of Menu Item to add</string>
    <string name="Add">Add</string>
    <string name="Enter">Enter</string>
    <string name="AddDailyMenu">Add Daily Menu</string>
    <string name="AddRating">Give Rating</string>
    <string name="AddReview">Give Review</string>
    <string name="SendRatingReview">Send Review and Rating</string>
    <string name="DailyMenu">Daily Menu</string>
    <string name="Menu">Price Menu</string>
    <string name="VisittheMess">I am gonna visit the mess</string>
    <string name="bhajiadd">Add Bhaji</string>
    <string name="dailyMenuTitle">Number of item to add to daily menu</string>
    <string name="title_activity_marker">Map</string>
    <string name="title_activity_mess_location">Map</string>
    <string name="title_activity_nearby_mess">Map</string>
</resources>
