<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_type"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.arnavdesai.burrp.UserType"
    android:orientation="vertical">

    <TextView
        android:text="@string/Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/OwnerNameText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/OwnerNameEdit" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/OwnerMessText"
        android:text="@string/Mess" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/OwnerMessEdit" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/OwnerAddressText"
        android:text="@string/Address" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/OwnerAddressEdit" />

    <TextView
        android:text="@string/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/OwnerEmailText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/OwnerEmailEdit" />

    <TextView
        android:text="@string/PhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/OwnerPhoneText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/OwnerPhoneEdit"
        android:inputType="phone" />

    <TextView
        android:text="@string/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/OwnerPasswordText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/OwnerPasswordEdit" />

    <Button
        android:text="@string/LoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/OwnerLoginButton" />

</LinearLayout>
