<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_owner_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.arnavdesai.burrp.OwnerMenu"
    android:orientation="vertical">

    <TextView
        android:text="@string/Mess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/MessName"
        android:textColor="@android:color/holo_red_dark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/MessNameText"
        android:gravity="center"
        android:textColor="@android:color/holo_green_light" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/MessAddress"
        android:text="@string/Address"
        android:textColor="@android:color/holo_red_dark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/MessAddressText"
        android:gravity="center"
        android:textColor="@android:color/holo_green_light" />

    <TextView
        android:text="@string/PhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/PhoneNumber"
        android:textColor="@android:color/holo_red_dark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/PhoneNumberText"
        android:gravity="center"
        android:textColor="@android:color/holo_green_light" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Email"
        android:text="@string/Email"
        android:textColor="@android:color/holo_red_dark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/EmailText"
        android:gravity="center"
        android:textColor="@android:color/holo_green_light" />

    <Button
        android:text="@string/AddMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addMenuItem" />

    <Button
        android:text="@string/AddDailyMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addDailyMenu" />

    <Button
        android:text="Add location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_location" />

    <Button
        android:text="Logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logout" />

    <ProgressBar
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_marginTop="150dp" />

</LinearLayout>
