<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.arnavdesai.burrp.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="244dp"
            app:srcCompat="@drawable/tiffin"
            android:id="@+id/imageView" />

        <TextView
            android:text="@string/Welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="30sp"
            android:layout_weight="0.70"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance.Material" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LoginButt"
            android:background="@drawable/button_background"
            style="@style/Widget.AppCompat.Button"
            android:text="@string/LoginButton" />

        <Button
            android:text="@string/SignupButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:id="@+id/SignupButt"
            style="@style/Widget.AppCompat.Button"
            android:layout_marginTop="20dp" />

    </LinearLayout>
</RelativeLayout>
