<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_student_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.arnavdesai.burrp.StudentMenu"
    android:orientation="vertical">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/back"
        android:id="@+id/back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/scroll">

            <TextView
                android:text="@string/Mess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/MessName"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:textColor="@android:color/holo_red_dark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/MessNameText"
                android:textSize="18sp"
                android:textColor="@android:color/holo_green_light" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/MessAddress"
                android:text="@string/Address"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:textColor="@android:color/holo_red_dark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/MessAddressText"
                android:textSize="18sp"
                android:textColor="@android:color/holo_green_light" />

            <TextView
                android:text="@string/PhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/PhoneNumber"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:textColor="@android:color/holo_red_dark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/PhoneNumberText"
                android:textSize="18sp"
                android:textColor="@android:color/holo_green_light" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Email"
                android:text="@string/Email"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:textColor="@android:color/holo_red_dark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/EmailText"
                android:textSize="18sp"
                android:textColor="@android:color/holo_green_light" />

            <TextView
                android:text="@string/AddRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/RatingText"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:textColor="@android:color/holo_red_dark" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBar2"
                android:numStars="@integer/stars"
                android:stepSize="0.1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/RatingDisplay" />

            <TextView
                android:text="@string/AddReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ReviewText"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:textColor="@android:color/holo_red_dark" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/ReviewEdit" />

            <Button
                android:text="@string/SendRatingReview"
                android:id="@+id/sendReviewRating"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />

            <Button
                android:text="Show Location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/showLocation" />

            <Button
                android:text="Eat at Mess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/comingButton" />

            <Button
                android:id="@+id/show_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Todays Menu" />

            <Button
                android:id="@+id/show_menucrd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Menu Card" />

            <Button
                android:id="@+id/showReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Show Review" />
s
        </LinearLayout>
    </ScrollView>

</LinearLayout>
